# Vita_Suwayomi

./: .gitignore  .gitmodules  ADDING_THEMES.md  CMakeLists.txt  CRASH_ANALYSIS.md  README.md  VERSION  api.txt  build ps vita app  psp2core-1771826419-0x0024893519-eboot.bin.psp2dmp  psp2core-1771828561-0x0023022f61-eboot.bin.psp2dmp.tmp  psp2core-1771830771-0x0024742e65-eboot.bin.psp2dmp.tmp  psp2core-1771905169-0x0023f32707-eboot.bin.psp2dmp.tmp  psp2core-1771912430-0x001bae2a31-eboot.bin.psp2dmp.tmp  psp2core-1772142153-0x0024493191-eboot.bin.psp2dmp  psp2core-1772143732-0x00284f272f-eboot.bin.psp2dmp.tmp  psp2core-1772146505-0x0027f738ab-eboot.bin.psp2dmp.tmp  psp2core-1772147948-0x0024b438b3-eboot.bin.psp2dmp.tmp  psp2core-1772149643-0x001bfe2a21-eboot.bin.psp2dmp  psp2core-1772149908-0x001a90245b-eboot.bin.psp2dmp.tmp  psp2core-1772158492-0x00289e2d4b-eboot.bin.psp2dmp.tmp  psp2core-1772162957-0x002290220d-eboot.bin.psp2dmp.tmp  psp2core-1772167725-0x0027e12de3-eboot.bin.psp2dmp.tmp  psp2core-1772173700-0x00230530fb-eboot.bin.psp2dmp.tmp  psp2core-1772216938-0x00294f316b-eboot.bin.psp2dmp.tmp  psp2core-1772220375-0x0029ae2671-eboot.bin.psp2dmp.tmp  psp2core-1772253329-0x002a182f33-eboot.bin.psp2dmp.tmp  psp2core-1772254863-0x0020a034fb-eboot.bin.psp2dmp.tmp  psp2core-1772261831-0x0024e327ab-eboot.bin.psp2dmp.tmp  psp2core-1772483543-0x002dc8306f-eboot.bin.psp2dmp  psp2core-1772503762-0x00282f3f3f-eboot.bin.psp2dmp.tmp  psp2core-1772506226-0x0029e4257b-eboot.bin.psp2dmp.tmp  psp2core-1772509571-0x0030e73f3d-eboot.bin.psp2dmp.tmp  psp2core-1772565595-0x002d3c3131-eboot.bin.psp2dmp  psp2core-1772672725-0x00313c3d87-eboot.bin.psp2dmp.tmp  psp2core-1772676495-0x0025b72e29-eboot.bin.psp2dmp.tmp  psp2core-1772725812-0x00022440ed-eboot.bin.psp2dmp.tmp  psp2core-1772738018-0x00025c4b43-eboot.bin.psp2dmp.tmp  psp2core-1772766440-0x00362d3d17-eboot.bin.psp2dmp.tmp  psp2core-1772768032-0x002cc6304d-eboot.bin.psp2dmp.tmp  (+14 more)
.github/ISSUE_TEMPLATE/: testing-checklist-Cross-Platform.md  testing-checklist-v2.md  testing-checklist-v3.md  testing-checklist-v3.md.txt  testing-checklist.md
.github/workflows/: T.yml  build-multi-platform(1).yml  build-multi-platform.yml  build-vpk.yml
app/platform/android/app/: build.gradle
app/platform/android/app/jni/: CMakeLists.txt
app/platform/android/app/src/main/: AndroidManifest.xml
app/platform/android/app/src/main/java/org/vitasuwayomi/app/: VitaSuwayomiActivity.java
app/platform/android/app/src/main/res/values/: colors.xml
cmake/: CopyDirBestEffort.cmake  copy_runtime_dlls.cmake
cmake/vita_gles2_compat/gpu_es4/: psp2_pvr_hint.h
include/activity/: login_activity.hpp  main_activity.hpp  player_activity.hpp  reader_activity.hpp
include/app/: application.hpp  audiobookshelf_client.hpp  downloads_manager.hpp  suwayomi_client.hpp  temp_file_manager.hpp
include/platform/: paths.hpp  platform.hpp
include/player/: mpv_player.hpp
include/utils/: async.hpp  audio_utils.hpp  button_icons.hpp  http_client.hpp  image_loader.hpp  jwt_auth.hpp  library_cache.hpp  perf_overlay.hpp
include/view/: downloads_tab.hpp  extensions_tab.hpp  history_tab.hpp  home_tab.hpp  horizontal_scroll_row.hpp  library_section_tab.hpp  long_press_gesture.hpp  manga_detail_view.hpp  manga_item_cell.hpp  media_detail_view.hpp  media_item_cell.hpp  migrate_search_view.hpp  options_popover.hpp  pinch_gesture.hpp  podcast_search_tab.hpp  progress_dialog.hpp  recycling_grid.hpp  rotatable_box.hpp  rotatable_image.hpp  rotatable_label.hpp  search_tab.hpp  settings_tab.hpp  source_browse_tab.hpp  storage_view.hpp  tracking_search_view.hpp  video_view.hpp  webtoon_scroll_view.hpp
patches/: psv_input.cpp
resources/i18n/en-US/: main.json
resources/xml/activity/: login.xml  reader.xml
resources/xml/tabs/: extensions.xml
resources/xml/view/: manga_detail.xml  manga_item.xml
src/: app.cpp  main.cpp
src/activity/: login_activity.cpp  main_activity.cpp  player_activity.cpp  reader_activity.cpp
src/android/: native_activity_entry.cpp
src/app/: application.cpp  audiobookshelf_client.cpp  downloads_manager.cpp  suwayomi_client.cpp  temp_file_manager.cpp
src/platform/: platform_android.cpp  platform_desktop.cpp  platform_ps4.cpp  platform_switch.cpp  platform_vita.cpp
src/player/: mpv_player.cpp
src/utils/: audio_utils.cpp  http_client.cpp  image_loader.cpp  jwt_auth.cpp  library_cache.cpp  perf_overlay.cpp
src/view/: downloads_tab.cpp  extensions_tab.cpp  history_tab.cpp  home_tab.cpp  horizontal_scroll_row.cpp  library_section_tab.cpp  manga_item_cell.cpp  media_detail_view.cpp  media_item_cell.cpp  migrate_search_view.cpp  options_popover.cpp  pinch_gesture.cpp  podcast_search_tab.cpp  progress_dialog.cpp  recycling_grid.cpp  rotatable_box.cpp  rotatable_image.cpp  rotatable_label.cpp  search_tab.cpp  settings_tab.cpp  source_browse_tab.cpp  storage_view.cpp  tracking_search_view.cpp  video_view.cpp  webtoon_scroll_view.cpp
